# images

./: .gitignore  AGENTS.md  README.md  build_desktop.bat  check_db.py  check_db_file.py  check_file_db.py  check_file_db_v2.py  clean_faces.py  debug_classify.py  debug_db_gps.py  debug_db_metadata.py  debug_diagnostics.py  debug_find_file.py  debug_google_context.py  debug_gps_deep.py  debug_list_files.py  debug_location_options.py  debug_log.txt  debug_nominatim.py  debug_on_this_day.py  debug_places.py  debug_processors.py  debug_qwen_trans.py  debug_scan_all.py  debug_specific_file.py  diagnose_gps.py  find_line.py  find_samples.py  get_paths.py  history.db  info.md  pyproject.toml  reindex_one.py  requirements-dev.txt  requirements.txt  setup.iss  start.bat  sync_existing_db.bat  verify_dual_model.py  (+4 more)
.github/workflows/: release.yml  test.yml
assets/: tags_vocab.txt  tags_zh.json
scripts/: clean_db_translations.py  count_media_stats.py  diagnose_cv2.py  init_empty_db.py  reproduce_video_path.py  verify_video_processor.py
search.db/2b22ee3e-a8e6-46e3-b3bc-895af0b1021a/: index_metadata.pickle
src/: main_cli.py  main_desktop.py
src/api/: __init__.py  errors.py  helpers.py  models.py  security.py  server.py  state.py
src/assets/: place_map.json
src/core/: face_processor.py  generator.py  location_processor.py  (+11 more)
tests/: conftest.py  test_api_config.py  test_api_privacy.py  test_api_security.py  test_errors.py  test_helpers.py  test_photos_metadata.py  test_sqlite_store.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+52 files in other folders)
